--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -14,6 +14,9 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///var/run/supervisor.sock
 
+; --------------------------------------
+; ⚙️  PHP-FPM
+; --------------------------------------
 [program:php-fpm]
 command=php-fpm
 autostart=true
@@ -22,6 +25,9 @@ priority=10
 stdout_logfile=/var/log/supervisor/php-fpm.log
 stderr_logfile=/var/log/supervisor/php-fpm-error.log
 
+; --------------------------------------
+; ⚙️  Laravel Queue Worker
+; --------------------------------------
 [program:laravel-queue-worker]
 command=php /var/www/html/artisan queue:work --sleep=3 --tries=3 --timeout=120
 autostart=true
@@ -31,3 +37,9 @@ killasgroup=true
 numprocs=1
 redirect_stderr=true
 stdout_logfile=/var/www/html/storage/logs/worker.log
+
+; --------------------------------------
+; ⚙️  Include thêm các file .conf (vd: laravel-scheduler.conf)
+; --------------------------------------
+[include]
+files = /etc/supervisor/conf.d/*.conf
